Fixes on the mobile view for Language and alignment

--- a/PublicWebsite/themekit/css/skin.css
+++ b/PublicWebsite/themekit/css/skin.css
@@ -74,11 +74,39 @@ hr.space-lg {
 ===================================================================
 
 */
-.menu-cnt > ul > li > a {    
-    font-size: 15px;    
+
+
+.icon-links a {
+width: 0px;
+margin-right: 25px;
+}
+    .mt--7 {
+    margin-top: -7px !important;
+}
+.menu-full-width {
+width:98% !important;
+}
+.mt-2 {
+    margin-top: 2px !important;
+}
+.pb-40 {
+    padding-bottom: 40px !important;
+}
+.float-right {
+    float:right !important;
+}
+.pb-41 {
+    padding-bottom: 41px
+}
+.dropdown > ul, .dropdown-submenu > ul {
+    min-width:0px;
+}
+.menu-cnt > ul > li > a {
+    font-size: 15px;
 }
 .menu-mini > .container > ul > li {
     font-weight: 700;
+    padding-right:0px;
 }
     /*
 
@@ -134,7 +162,23 @@ Medium devices (tablets, less than 992px)
 */
 
 @media (max-width: 991.98px) {
+    .dropdown:hover > ul, .dropdown:hover .mega-menu, .dropdown-submenu:hover > ul {
+        display: block;
+        z-index: 4;
+    }
+    .dropdown ul:not(.icon-list) {
+        position: absolute;
+        box-shadow: 0px 6px 5px rgb(0 0 0 / 17%);
+    }
+    .footer-bar > .container {
+        text-align: center
+    }
 
+        .footer-bar > .container > span:last-child {
+            content: "\a";
+            white-space: pre;
+            float: none
+        } 
 }
 
 /*
@@ -143,14 +187,7 @@ Small devices (landscape phones, less than 768px)
 */
 
 @media (max-width: 767.98px) {
-    .footer-bar > .container {
-    text-align:center
-    }
-        .footer-bar > .container > span:last-child {
-        content: "\a";
-        white-space: pre;
-        float:none
-    }   
+  
 }
 
 /*
@@ -159,6 +196,15 @@ Extra small devices (portrait phones, less than 576px)
 */
 
 @media (max-width: 575.98px) {
-
+    .mobile-d-none {
+        display: none;
+    }
+    .menu-full-width {
+        width:90% !important;
+    }
 }
-
+@media (max-width: 463.98px) {
+    .menu-full-width {
+        width: 90% !important;
+    }
+}
